Updated framework including all pages updated